--- a/index10.html
+++ b/index10.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="main10.css">
-    <title>Pryecto final</title>
+    <title>Proyecto final</title>
 </head>
 <body>
     <nav class="main-menu">
